pre presentation commit

--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -99,7 +99,7 @@ and Neuroticism.
 % talk about how Big 5 are often measured in aggregate, but studies
 % rarely find significant results for each one.
 
-\section{Well-Understood Traits}\label{WellStudied}
+\section{Locus of Control and Cognitive Abilities}\label{WellStudied}
 It is worth noting that we define these traits as "well understood"
 relative to the collective body of individual traits. This
 definition does not necessarily imply that there has been greater
@@ -180,16 +180,50 @@ more generalized truths about the role of locus of control in visual analytics
 interactions have not been uncovered, the state of locus of control research
 is a good reference for other personality traits.
 
+\subsection{Cognitive Abilities}
+Visual working memory, verbal working memory, and perceptual speed have often
+been studied with respect to visualization under the collective label
+"cognitive abilities" \cite{UserAdaptive, HighlightingInterventions, ConatiLayouts}.
+A primary goal of this research is to design individual-sensitive
+visualizations. If a person's traits could be inferred, visualizations could
+eventually be catered to that person's specific strengths and needs. Steichen
+et al's study into cognitive abilities, "User-Adaptive Information Visualization:
+Using Eye Gaze Data to Infer Visualization Tasks and User Cognitive Abilities"
+is a useful lense into this effort\cite{UserAdaptive}. This work examines the
+potential of real time eye-gaze tracking data in extracting information about
+a person's traits and current activity. Study participants were presented
+with either a bar or radar graph and asked to answer taxonomized questions
+about the information displayed. It was shown that by tracking a participant's
+eye gaze data, researchers could predict not only the type of visualization
+used, but also the task at hand through observations connected with a user's
+individual traits. It was found that eye gaze information at the start of an
+interaction was most useful for predictions. High verbal working memory
+was correlated with less time fixated on graph textual information, high
+visual working memory was correlated with lower times until a first fixation,
+and low perceptual speed was correlated with more time focused on graph legends.
+These correlations, when observed with eye gaze data, could produce useful
+real-time visualization adaptations (eg a person with low perceptual speed
+could be registered in order to produce more accomodating legends.)
 
+Adaptations are further studied with respect to cognitive abilities in
+Carenini et al's "Highlighting interventions and user differences:
+Informing adaptive information visualization support." This study
+asks questions about bar graphs
+
+% Cognitive abilities (Visual and Verbal working memory, perceptual speed)
+% Evaluating the Impact of User Characteristics and Different Layouts on an
+%     Interactive Visualization for Decision Making Conati
+% Highlighting interventions and user differences: informing adaptive
+%      information visualization support Carenini
+% There is a clear progression of this research
+
+% Spatial Ability
+% Chen: Spatial ability and visual navigation: an empirical study
+% Velez at el.: Understanding Visualization through Spatial Ability Differences
 % Openness
 % - Visual metaphors show lack of significance
 % - Gajos tests need for cognition: openness is highly correlated with
 % need for cognition, and so further research should explore it
-
-% Agreeableness
-% - Could not find significant results
-% - Most tasks shown do not have an intuitive connection to agreeableness;
-% therefore this absence of significance makes sense
 
 % Next steps
 % based on what we've seen, what are possible future directions?
@@ -209,10 +243,22 @@ is a good reference for other personality traits.
 % papers, whereas many Big 5 traits are examined as a whole.
 % There is less detail given to any one of them. d
 
-\subsection{Subsection}
+\section{The Big Five Personality Traits}
+Personality is often studied in visualization using the Five-factor model, or
+Big Five personality traits. These traits consist of Openness, Conscientiousness,
+Extraversion, Agreeableness, and Neuroticism. While these traits are often
+evaluated together, our levels of understandings of each trait's impact on visualization
+interaction varies considerably.
 
-\cite{GreenTowardsPersonalEquation}
-\cite{Ziemkiewicz,ZiemkiewiczOttley,OttleyPriming,Waldo}
+\subsection{Openness}\label{Openness}
+\subsection{Conscientiousness}\label{Conscientiousness}
+\subsection{Extraversion}\label{Extraversion}
+\subsection{Agreeableness}\label{Agreeableness}
+\subsection{Neuroticism}\label{Neuroticism}
+% Agreeableness
+% - Could not find significant results
+% - Most tasks shown do not have an intuitive connection to agreeableness;
+% therefore this absence of significance makes sense
 \bibliographystyle{ieee}
 \bibliography{refs}
 \vspace{12pt}
