--- a/refs.bib
+++ b/refs.bib
@@ -27,19 +27,6 @@ doi={10.1109/VAST.2011.6102445},
 ISSN={}, 
 month={Oct}
 }
-@article{ZiemkiewiczOttley, 
-author={C. {Ziemkiewicz} and A. {Ottley} and R. J. {Crouser} and A. R. {Yauilla} and S. L. {Su} and W. {Ribarsky} and R. {Chang}}, 
-journal={IEEE Transactions on Visualization and Computer Graphics}, 
-title={How Visualization Layout Relates to Locus of Control and Other Personality Factors}, 
-year={2013}, 
-volume={19}, 
-number={7}, 
-pages={1109-1121}, 
-keywords={data visualisation;visualization layout;locus of control;personality factors;individual personality difference;complex visualization systems;personality traits;LOC;color;interaction;labeling;list metaphor;containment metaphor;adaptive visual analytics;visualization evaluation;visualization externalization theory;Layout;Data visualization;Problem-solving;Correlation;Visual analytics;Electronic mail;Visualization;individual differences;locus of control;Age Factors;Computer Graphics;Extraversion (Psychology);Humans;Internal-External Control;Introversion (Psychology);Personality;Personality Assessment;Sex Factors;Visual Perception}, 
-doi={10.1109/TVCG.2012.180}, 
-ISSN={1077-2626}, 
-month={July}
-}
 @INPROCEEDINGS{OttleyPriming, 
 author={A. {Ottley} and R. J. {Crouser} and C. {Ziemkiewicz} and R. {Chang}}, 
 booktitle={2012 IEEE Conference on Visual Analytics Science and Technology (VAST)}, 
@@ -65,4 +52,50 @@ keywords={data analysis;data visualisation;graphical user interfaces;learning (a
 doi={10.1109/TVCG.2014.2346575}, 
 ISSN={1077-2626}, 
 month={Dec}
+}
+@inproceedings{UserAdaptive,
+ author = {Steichen, Ben and Carenini, Giuseppe and Conati, Cristina},
+ title = {User-adaptive Information Visualization: Using Eye Gaze Data to Infer Visualization Tasks and User Cognitive Abilities},
+ booktitle = {Proceedings of the 2013 International Conference on Intelligent User Interfaces},
+ series = {IUI '13},
+ year = {2013},
+ isbn = {978-1-4503-1965-2},
+ location = {Santa Monica, California, USA},
+ pages = {317--328},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2449396.2449439},
+ doi = {10.1145/2449396.2449439},
+ acmid = {2449439},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {adaptation, adaptive information visualization, eye-tracking, machine learning},
+}
+@inproceedings{HighlightingInterventions,
+ author = {Carenini, Giuseppe and Conati, Cristina and Hoque, Enamul and Steichen, Ben and Toker, Dereck and Enns, James},
+ title = {Highlighting Interventions and User Differences: Informing Adaptive Information Visualization Support},
+ booktitle = {Proceedings of the 32Nd Annual ACM Conference on Human Factors in Computing Systems},
+ series = {CHI '14},
+ year = {2014},
+ isbn = {978-1-4503-2473-1},
+ location = {Toronto, Ontario, Canada},
+ pages = {1835--1844},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2556288.2557141},
+ doi = {10.1145/2556288.2557141},
+ acmid = {2557141},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {adaptive information visualization, user characteristics},
+} 
+@article{ConatiLayouts,
+author = {Conati, C. and Carenini, G. and Hoque, E. and Steichen, B. and Toker, D.},
+title = {Evaluating the Impact of User Characteristics and Different Layouts on an Interactive Visualization for Decision Making},
+journal = {Computer Graphics Forum},
+volume = {33},
+number = {3},
+pages = {371-380},
+keywords = {Categories and Subject Descriptors (according to ACM CCS):, H.5.m. Information interfaces and presentation (e.g., HCI): Miscellaneous},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.12393},
+abstract = {Abstract There is increasing evidence that user characteristics can have a significant impact on visualization effectiveness, suggesting that visualizations could be designed to better fit each user's specific needs. Most studies to date, however, have looked at static visualizations. Studies considering interactive visualizations have only looked at a limited number of user characteristics, and consider either low-level tasks (e.g., value retrieval), or high-level tasks (in particular: discovery), but not both. This paper contributes to this line of work by looking at the impact of a large set of user characteristics on user performance with interactive visualizations, for both low and high-level tasks. We focus on interactive visualizations that support decision making, exemplified by a visualization known as Value Charts. We include in the study two versions of ValueCharts that differ in terms of layout, to ascertain whether layout mediates the impact of individual differences and could be considered as a form of personalization. Our key findings are that (i) performance with low and high-level tasks is affected by different user characteristics, and (ii) users with low visual working memory perform better with a horizontal layout. We discuss how these findings can inform the provision of personalized support to visualization processing.},
+year = {2014}
 }
