--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -155,7 +155,7 @@ that peoples' Locus of Control could be "swayed" externally or internally, which
 was reflected in the replicated study's results \cite{OttleyPriming}. The idea
 that individual traits, which are often thought to be static, can be influenced
 carries powerful implications. As the personality-visualization relationship
-becomes more well understood, whether traits can be primed to provoke different
+becomes more well understood, whether traits can be primed to provoke specific 
 interactions with a given visualization may become a relevant question.
 
 In a return to direct application, Brown et al's 2014 study, "Finding Waldo:
@@ -208,11 +208,22 @@ could be registered in order to produce more accomodating legends.)
 Adaptations are further studied with respect to cognitive abilities in
 Carenini et al's "Highlighting interventions and user differences:
 Informing adaptive information visualization support." This study
-asks questions about bar graphs
+examined the effects of real-time adajustments to bar graphs designed to
+assist in graph comprehension. It was found that these adjustments could
+aid study participants in question performance. Additionally, this study
+found that high perceptual speed was correlated with significantly faster
+task completion, and that low verbal working memory was correlated with
+worse task performance\cite{HighlightingInterventions}.
+
+Both of these studies had administered questions under the same task taxonomy.
+This taxonomy characterized these questions as "low level" forms of information
+extraction, which belonged to classes such as "Retrieve Value", "Compute Derived
+Value", and "Sort"\cite{Amar}. A 2014 study on cognitive abilities in the context
+of user layout 
 
 % Cognitive abilities (Visual and Verbal working memory, perceptual speed)
 % Evaluating the Impact of User Characteristics and Different Layouts on an
-%     Interactive Visualization for Decision Making Conati
+%   Interactive Visualization for Decision Making Conati
 % Highlighting interventions and user differences: informing adaptive
 %      information visualization support Carenini
 % There is a clear progression of this research
