--- a/refs.bib
+++ b/refs.bib
@@ -87,6 +87,20 @@ month={Dec}
  address = {New York, NY, USA},
  keywords = {adaptive information visualization, user characteristics},
 } 
+
+@INPROCEEDINGS{Amar, 
+author={R. {Amar} and J. {Eagan} and J. {Stasko}}, 
+booktitle={IEEE Symposium on Information Visualization, 2005. INFOVIS 2005.}, 
+title={Low-level components of analytic activity in information visualization}, 
+year={2005}, 
+volume={}, 
+number={}, 
+pages={111-117}, 
+keywords={data visualisation;user interfaces;data analysis;user analytic activity;information visualization tool;system level taxonomy;visualization task;low level analysis task;data set analysis;analytic question;information visualization system;Information analysis;Taxonomy;Data visualization;Motion pictures;Educational institutions;Data analysis;Chromium;Computer applications;Algorithm design and analysis;Performance analysis}, 
+doi={10.1109/INFVIS.2005.1532136}, 
+ISSN={1522-404X}, 
+month={Oct},}
+
 @article{ConatiLayouts,
 author = {Conati, C. and Carenini, G. and Hoque, E. and Steichen, B. and Toker, D.},
 title = {Evaluating the Impact of User Characteristics and Different Layouts on an Interactive Visualization for Decision Making},
