--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -213,13 +213,29 @@ assist in graph comprehension. It was found that these adjustments could
 aid study participants in question performance. Additionally, this study
 found that high perceptual speed was correlated with significantly faster
 task completion, and that low verbal working memory was correlated with
-worse task performance\cite{HighlightingInterventions}.
+worse task performance\cite{HighlightingInterventions}. A 2014 study on
+cognitive abilities in the context of user layout found similar
+results when measuring task completion times. It found that low verbal or visual
+working memory was correlated with slower sorting times, and perceptual speed
+was correlated with faster completion times across all tasks\cite{ConatiLayouts}.
+However, this study also examined "high level" questions that consisted of more
+general, qualitative questions, and found no significant effects of cognitive
+abilities for these particular questions.
+While the contexts of each of these three studies varied, the consistency of their
+results lends credence to an intuivive thought on the impact of cognitive abilities:
+higher levels of cognitive abilities allow more proficient interactions with visualizations.
 
-Both of these studies had administered questions under the same task taxonomy.
-This taxonomy characterized these questions as "low level" forms of information
+Each of these studies had administered questions under the same task taxonomy of
+"low level" tasks. This taxonomy enumerated questions as forms of information
 extraction, which belonged to classes such as "Retrieve Value", "Compute Derived
-Value", and "Sort"\cite{Amar}. A 2014 study on cognitive abilities in the context
-of user layout 
+Value", and "Sort"\cite{Amar}. While these classes are far from exhaustive, it is
+worth noting the standardization with which these studies on cognitive abilities
+have been administered. This standardization may have contributed to the strong 
+consistency that has been observed for cognitive abilities. It is reasonable that
+higher cognitive abilities could be particularly well suited suited to the task
+of extracting information from a visualization. As such, future research efforts
+may benefit from exploring novel encodings of interaction and higher level tasks.
+
 
 % Cognitive abilities (Visual and Verbal working memory, perceptual speed)
 % Evaluating the Impact of User Characteristics and Different Layouts on an
@@ -227,14 +243,6 @@ of user layout
 % Highlighting interventions and user differences: informing adaptive
 %      information visualization support Carenini
 % There is a clear progression of this research
-
-% Spatial Ability
-% Chen: Spatial ability and visual navigation: an empirical study
-% Velez at el.: Understanding Visualization through Spatial Ability Differences
-% Openness
-% - Visual metaphors show lack of significance
-% - Gajos tests need for cognition: openness is highly correlated with
-% need for cognition, and so further research should explore it
 
 % Next steps
 % based on what we've seen, what are possible future directions?
@@ -262,7 +270,27 @@ evaluated together, our levels of understandings of each trait's impact on visua
 interaction varies considerably.
 
 \subsection{Openness}\label{Openness}
+Openness to experience is a trait that has not enjoyed much attention. However, it has
+been shown to imply adaptability in visualization interactions. For example, a 2009 study
+proposed a framework for studying visualization through the visual metaphors they
+portray. It compared node-link diagrams and treemaps in their display of information
+hierarchies, either as series of levels or as sets of nested containers, respectively.
+Study participants were then asked to answer questions about each visualization, where
+the questions were phrased with either compatible or conflicting metaphors to their
+respective visualizations. The study found that this question-visualization compatibility
+nearly universally impacted the accuracy of participants’ responses. The one exception
+to this effect was observed in people with high levels of openness. This abscence suggests
+that openness to experience allows easier adjustment to disruptions in visualization
+interaction. It is worth noting that this example slightly deviates from our framework
+in that it discusses the impact of openness in terms of a lack of significant observation.
+As such, it is indicative of a weaker understanding of the relationship between openness
+and visualization interaction. Nonetheless, this finding seems logical and carries
+promising implications. Future openness research could benefit from exploring visualization
+contexts that require participants to interact with more dynamic visualizations and tasks.
+
 \subsection{Conscientiousness}\label{Conscientiousness}
+Conscientiousness, characterized by diligence and carefulness, is generally thought an
+indicator of success.  
 \subsection{Extraversion}\label{Extraversion}
 \subsection{Agreeableness}\label{Agreeableness}
 \subsection{Neuroticism}\label{Neuroticism}
