--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -288,12 +288,54 @@ and visualization interaction. Nonetheless, this finding seems logical and carri
 promising implications. Future openness research could benefit from exploring visualization
 contexts that require participants to interact with more dynamic visualizations and tasks.
 
-\subsection{Conscientiousness}\label{Conscientiousness}
-Conscientiousness, characterized by diligence and carefulness, is generally thought an
-indicator of success.  
 \subsection{Extraversion}\label{Extraversion}
-\subsection{Agreeableness}\label{Agreeableness}
+Extraversion, which is often characterized by outgoing behavior, displays consistent
+significance within visualization performance. In a study conducted by Sarsam et al, 
+participants were divided into 2 clusters based on their personality profiles. Notably,
+people with higher scores in extraversion were clustered with those with high scores in
+conscientiousness, while the other cluster was marked by people with high neuroticism scores.
+These clusters were then mapped to a set of UI design characteristics using association rules,
+a popular method for uncovering relationships among variables. When another set of users were
+asked to evaluate UI designs constructed based on these rules, the cluster they belonged to
+was shown to reliably predict their preferences for UI design choices\cite{SarsamFirstLook}.
+This study is especially significant not only for its evidence towards a relationship amongst
+personality traits and visual analytic performance, but also for its presentation of concrete
+design choices. For example, the discovered rules included specific font choices such as Verdana
+vs Arial, and high vs low information density. These findings present evidence that
+specific, concrete design choices can be made based on the personality profiles of users,
+to increase user satisfaction. This idea is also supported by a study by Saati et al, which
+found that preferences towards color themes of a UI were correlated with levels of
+extraversion. Introverts tended to prefer cooler, more temperate colors such as blue\cite{Saati}.
+Brown et al's 2014 study also found that extraversion levels could be predicted from the task
+encodings, which suggests that different encodings which interact with extraversion could
+be worthwhile to explore further\cite{Waldo}. Amongst the big five personality traits,
+extraversion seems the most well studied. However, its research faces similar challenges to
+those of Locus of control, in that clear, generalized conclusions regarding its interactions
+with visualizations cannot yet be made. Nonetheless, because extraversion has consistently
+shown significance in the tasks and interaction measurements of visualization studies, it
+is reasonable to predict that future evaluations of the big five personality model will
+continue to uncover effects of extraversion.
+
 \subsection{Neuroticism}\label{Neuroticism}
+Neuroticism, the tendendency to experience negative emotions, has similarly shown consistent
+significance. As with extraversion, levels of neuroticism have been reliably predicted from
+novel encodings of interaction\cite{Waldo}, and have been the basis for the creation of
+personalized design rules\cite{SarsamFirstLook}. Ziemkiewicz's examination of layout 
+%problematic- visualization studied do not put participants in situations where they are
+% more likely to experience negative emotions, because of ethical concerns
+
+\subsection{Conscientiousness}\label{Conscientiousness}
+Conscientiousness which is characterized by carefulness, diligence and discipline, has generally
+been thought an indicator of success, and has been shown to be positively correlated with
+academic performance \cite{ImhofSpaet2013pv}. As such, it may be intuitive to hypothesize
+that similar effects to those of the cognitive abilities mentioned above would be consistently
+observed, since most visualization studies have studied conscientiousness with question
+accuracy as the metric to capture interaction. However, these effects have not been observed.
+While its effects have been examined with respect to extraversion \cite{SarsamFirstLook},
+it has not shown substantial, isolated significance. As such, 
+
+
+\subsection{Agreeableness}\label{Agreeableness}
 % Agreeableness
 % - Could not find significant results
 % - Most tasks shown do not have an intuitive connection to agreeableness;
