--- a/refs.bib
+++ b/refs.bib
@@ -113,3 +113,45 @@ url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.12393},
 abstract = {Abstract There is increasing evidence that user characteristics can have a significant impact on visualization effectiveness, suggesting that visualizations could be designed to better fit each user's specific needs. Most studies to date, however, have looked at static visualizations. Studies considering interactive visualizations have only looked at a limited number of user characteristics, and consider either low-level tasks (e.g., value retrieval), or high-level tasks (in particular: discovery), but not both. This paper contributes to this line of work by looking at the impact of a large set of user characteristics on user performance with interactive visualizations, for both low and high-level tasks. We focus on interactive visualizations that support decision making, exemplified by a visualization known as Value Charts. We include in the study two versions of ValueCharts that differ in terms of layout, to ascertain whether layout mediates the impact of individual differences and could be considered as a form of personalization. Our key findings are that (i) performance with low and high-level tasks is affected by different user characteristics, and (ii) users with low visual working memory perform better with a horizontal layout. We discuss how these findings can inform the provision of personalized support to visualization processing.},
 year = {2014}
 }
+
+@article{ImhofSpaet2013pv,
+	author = { Margarete Imhof and Tatjana Spaeth-Hilbert },
+	title = { The Role of Motivation, Cognition, and Conscientiousness for Academic Achievement },
+	journal = { International Journal of Higher Education },
+	volume = { 2 },
+	number = { 3 },
+	year = { 2013 },
+	pages = { 69--80 },
+	issn = { 1927-6044 },
+	abstract = { Based on a cognitive motivational process model of learning, the impact of studying behavior on learning outcome is investigated. First-year students (N = 488) participated in the study. Two research questions were addressed: (1) Can cognitive-motivational variables and objective study behavior predict individual learning? (2) Which factors drive studying behavior? Results show low to moderate correlations between cognitive-motivational variables and performance. A cluster analysis yielded three profiles: (1) interested learners with high academic self-concept and effort investment; (2) low interest learners with high academic self-concept and low effort investment; and (3) interested learners with low self-concept and low effort. Groups 2 and 3 are considered at-risk students for developing a surface approach to learning and for drop out. },
+	url = { https://www.learntechlib.org/p/161635 }
+}
+
+
+
+
+
+
+
+@article{SarsamFirstLook,
+author = {Samer Muthana Sarsam and Hosam Al-Samarraie},
+title ={A First Look at the Effectiveness of Personality Dimensions in Promoting Users’ Satisfaction With the System},
+journal = {SAGE Open},
+volume = {8},
+number = {2},
+pages = {2158244018769125},
+year = {2018},
+doi = {10.1177/2158244018769125},
+URL = {https://doi.org/10.1177/2158244018769125},
+eprint = {https://doi.org/10.1177/2158244018769125},
+abstract = {Personalization of the user interface (UI) to certain individuals’ characteristics is crucial for ensuring satisfaction with the service. Unfortunately, the attention in most UI personalization methods have been shifted from being behavioral-personalization to self-personalization. Practically, we explored the potential of linking users’ personality dimensions with their design preferences to shape the design of an interface. It is assumed that such design may effectively promote users’ satisfaction with the service. A total of 87 participants were used to design the UI for certain personality types, and 50 students were used to evaluate their satisfaction with the UI. The results that UI designed based on the users’ personality characteristics helped to stimulate their satisfaction in a mobile learning context. This study offers a new way for customizing the design of the interface based on the correlational link between individuals’ preferences and the structure of personality characteristics. }
+}
+
+
+
+
+@inproceedings{Saati,
+  title={Towards customized user interface skins: investigating user personality and skin colour},
+  author={Batul Saati and May Salem and Willem-Paul Brinkman and Middlesex Ub},
+  year={2005}
+}
