--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -69,7 +69,7 @@ relationship, we could design visualizations catered to a
 person’s specific needs, and infer a person’s traits from
 their interactions with electronic media.  However, there is
 still much work to be done, the nature of which is not always
-immediately clear. 
+immediately clear.
 
 The task of surveying the role of individual differences on
 visual analytics interactions is a very open-ended problem.
@@ -95,18 +95,33 @@ their roles in visual analytics interactions, we can more
 accurately discuss the states of other individual differences. 
 The other traits we consider include the Big Five personality traits
 of Openness, Conscientiousness, Extraversion, Agreeableness,
-and Neuroticism.
-% talk about how Big 5 are often measured in aggregate, but studies
-% rarely find significant results for each one.
+and Neuroticism. These traits are often studied in aggregate, and
+can be measured reliably with the International Personality Item Pool.
+However, each study surveyed has only been able to discover significances
+for a subset of these traits, and our understandings of specific traits'
+effects varies significanly.
 
-\section{Locus of Control and Cognitive Abilities}\label{WellStudied}
-It is worth noting that we define these traits as "well understood"
-relative to the collective body of individual traits. This
-definition does not necessarily imply that there has been greater
-research interest in these traits. Rather, studies often evaluate
-multiple traits in conjunction and the traits we label as
-"well understood" reflect greater results.
-\subsection{Locus of Control}\label{LocusOfControl}
+Fifty seven visualization papers have been surveyed, and thirteen of these
+papers have been found to directly examine the relationship between visual
+analytics interactions and the individual traits enumerated above. 
+
+\subsection{Visual Analytics Interactions}
+It is worth noting that an interaction with a visualization is not well defined. As
+such, a visualization study has endless ways to measure and interpret an interaction.
+However, the majority of studies surveyed have asked participants to use a visualization
+to answer questions about the information portrayed, where response accuracies
+serve as metrics for how "well" an interaction went. Although this encoding enjoys the
+benefits of being qualitative and consistent, it is provides a limited view of the
+interaction itself. Other methods of measurement include tracking eye movement,
+time, and mouse movements as a person interacts with a visualization
+\cite{Green2010UsingPF, Waldo}. Each different encoding may reveal a different perspective
+with which to examine an interaction. As such, with traits for which the majority of studies
+have relied on question accuracies in their assessment of interactions, it would be productive
+to explore interactions with a more diverse set of encodings.
+
+
+
+\section{Locus of Control}\label{LocusOfControl}
 Locus of Control, the degree to which a person believes they
 have control over their lives, has been studied closely
 within the context of visualization. Green et al's 
@@ -180,7 +195,7 @@ more generalized truths about the role of locus of control in visual analytics
 interactions have not been uncovered, the state of locus of control research
 is a good reference for other personality traits.
 
-\subsection{Cognitive Abilities}
+\section{Cognitive Abilities}
 Visual working memory, verbal working memory, and perceptual speed have often
 been studied with respect to visualization under the collective label
 "cognitive abilities" \cite{UserAdaptive, HighlightingInterventions, ConatiLayouts}.
@@ -320,7 +335,10 @@ continue to uncover effects of extraversion.
 Neuroticism, the tendendency to experience negative emotions, has similarly shown consistent
 significance. As with extraversion, levels of neuroticism have been reliably predicted from
 novel encodings of interaction\cite{Waldo}, and have been the basis for the creation of
-personalized design rules\cite{SarsamFirstLook}. Ziemkiewicz's examination of layout 
+personalized design rules\cite{SarsamFirstLook}. Ziemkiewicz's examination of layout with
+respect to containment metaphors found that high levels of neuroticism were correlated with
+better task performance on the layouts with most and least explicit containment metaphors
+\cite{Ziemkiewicz}.
 %problematic- visualization studied do not put participants in situations where they are
 % more likely to experience negative emotions, because of ethical concerns
 
@@ -336,6 +354,9 @@ it has not shown substantial, isolated significance. As such,
 
 
 \subsection{Agreeableness}\label{Agreeableness}
+Our understanding of the effects agreeableness, which is associated with kindness and modesty,
+is markedly poor. Out of the fifty seven studies surveyed, it has neither been discussed nor
+found significant. 
 % Agreeableness
 % - Could not find significant results
 % - Most tasks shown do not have an intuitive connection to agreeableness;
