--- a/diff_survey.tex
+++ b/diff_survey.tex
@@ -110,9 +110,14 @@ It is worth noting that an interaction with a visualization is not well defined.
 such, a visualization study has endless ways to measure and interpret an interaction.
 However, the majority of studies surveyed have asked participants to use a visualization
 to answer questions about the information portrayed, where response accuracies
-serve as metrics for how "well" an interaction went. Although this encoding enjoys the
-benefits of being qualitative and consistent, it is provides a limited view of the
-interaction itself. Other methods of measurement include tracking eye movement,
+serve as metrics for how "well" an interaction went. While these questions are
+usually structurally similar, they have been taxonomized in multiple different ways.
+One such taxonomy names questions as either procedural or inferential\cite{Green2010UsingPF}.
+Procedural tasks are defined as those that can, with repetition become automatic and require
+little conscious focus. Inferential tasks are those which require a person to draw conclusions
+from the information available to them. Although question-based encodings enjoy the
+benefits of being qualitative and consistent, they is provides a limited view of the
+interactions themselves. Other methods of measurement include tracking eye movement,
 time, and mouse movements as a person interacts with a visualization
 \cite{Green2010UsingPF, Waldo}. Each different encoding may reveal a different perspective
 with which to examine an interaction. As such, with traits for which the majority of studies
@@ -145,8 +150,9 @@ purpose of these interactions.
 Since Green et al's study, Locus of control, and
 individual differences in general have been studied with greater attention
 to the precise nature of given visualizations and tasks. Ziemkiewicz et al's 
-2011 study, "How locus of control influences compatibility with visualization style" assessed both procedural and inferential tasks, while
-examined individual differences with a more isolated assessment of layout.
+2011 study, "How locus of control influences compatibility with visualization style"
+assessed both procedural and inferential tasks, while
+examining individual differences with a more isolated assessment of layout.
 This study evaluated locus of control with four visualizations of increasingly
 explicit containment metaphors. These metaphors ranged from simple indentations
 to mark hierarchy to series of nested boxes. It found that those with external
@@ -251,32 +257,6 @@ higher cognitive abilities could be particularly well suited suited to the task
 of extracting information from a visualization. As such, future research efforts
 may benefit from exploring novel encodings of interaction and higher level tasks.
 
-
-% Cognitive abilities (Visual and Verbal working memory, perceptual speed)
-% Evaluating the Impact of User Characteristics and Different Layouts on an
-%   Interactive Visualization for Decision Making Conati
-% Highlighting interventions and user differences: informing adaptive
-%      information visualization support Carenini
-% There is a clear progression of this research
-
-% Next steps
-% based on what we've seen, what are possible future directions?
-%  as we think about how computers can help users, perhaps openness is a trait
-% that people can look at
-
-% identify and find behaviors showed different performances than
-% inferential tasks- suggesting that the impact of traits can be very
-% different depending on the task that is asked.
-% since this study, a variety of different tasks across different studies
-% have been evaluated.
-% However, if you look at tasks requested, there is no intuitive connection
-% with agreeableness, so this is why that makes sense
-
-
-% - Also consider that Locus of control is the focus of many
-% papers, whereas many Big 5 traits are examined as a whole.
-% There is less detail given to any one of them. d
-
 \section{The Big Five Personality Traits}
 Personality is often studied in visualization using the Five-factor model, or
 Big Five personality traits. These traits consist of Openness, Conscientiousness,
@@ -356,7 +336,17 @@ it has not shown substantial, isolated significance. As such,
 \subsection{Agreeableness}\label{Agreeableness}
 Our understanding of the effects agreeableness, which is associated with kindness and modesty,
 is markedly poor. Out of the fifty seven studies surveyed, it has neither been discussed nor
-found significant. 
+found significant. Because none of the current research has uncovered results, future
+avenues of research remain unclear. While discussions of agreeableness with respect to
+visual analytics interactions therefore remain speculative, it is worth considering what
+apects of visualization studies examined could lead to discoveries for every trait examined
+except agreeableness. Within each study, none of the tasks that participants are asked to
+perform have intuitive connections to agreeableness. Moving forward, it may be productive to
+design studies that examine more intuitively relevant tasks. For example, if a visualization
+portrayed two conflicting beliefs sympathetically, and evaluated participant preferences
+towards each belief, would a person with high measures of agreeableness exhibit a marked
+openness towards both?
+%conjecture, speculative future directions
 % Agreeableness
 % - Could not find significant results
 % - Most tasks shown do not have an intuitive connection to agreeableness;
